exports[`consistent-assert-style > invalid(1): import assert from 'node:assert';\nassert(value); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert(value);

`;

exports[`consistent-assert-style > invalid(1): import assert from 'node:assert';\nassert(value); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert(value);
    | ^^^^^^ Prefer \`assert.ok(…)\` over \`assert(…)\`.

Output:
  1 | import assert from 'node:assert';
  2 | assert.ok(value);

`;

exports[`consistent-assert-style > invalid(10): import {strict as strictAssert} from 'node:assert';\nstrictAssert(value); 1`] = `

  1 | import {strict as strictAssert} from 'node:assert';
  2 | strictAssert(value);

`;

exports[`consistent-assert-style > invalid(10): import {strict as strictAssert} from 'node:assert';\nstrictAssert(value); 2`] = `

Message:
  1 | import {strict as strictAssert} from 'node:assert';
> 2 | strictAssert(value);
    | ^^^^^^^^^^^^ Prefer \`strictAssert.ok(…)\` over \`strictAssert(…)\`.

Output:
  1 | import {strict as strictAssert} from 'node:assert';
  2 | strictAssert.ok(value);

`;

exports[`consistent-assert-style > invalid(11): import {default as assert} from 'node:assert/strict';\nassert(value); 1`] = `

  1 | import {default as assert} from 'node:assert/strict';
  2 | assert(value);

`;

exports[`consistent-assert-style > invalid(11): import {default as assert} from 'node:assert/strict';\nassert(value); 2`] = `

Message:
  1 | import {default as assert} from 'node:assert/strict';
> 2 | assert(value);
    | ^^^^^^ Prefer \`assert.ok(…)\` over \`assert(…)\`.

Output:
  1 | import {default as assert} from 'node:assert/strict';
  2 | assert.ok(value);

`;

exports[`consistent-assert-style > invalid(12): import {strict as assert} from 'node:assert/strict';\nassert(value); 1`] = `

  1 | import {strict as assert} from 'node:assert/strict';
  2 | assert(value);

`;

exports[`consistent-assert-style > invalid(12): import {strict as assert} from 'node:assert/strict';\nassert(value); 2`] = `

Message:
  1 | import {strict as assert} from 'node:assert/strict';
> 2 | assert(value);
    | ^^^^^^ Prefer \`assert.ok(…)\` over \`assert(…)\`.

Output:
  1 | import {strict as assert} from 'node:assert/strict';
  2 | assert.ok(value);

`;

exports[`consistent-assert-style > invalid(13): import {strict as assert} from 'assert/strict';\nassert(value); 1`] = `

  1 | import {strict as assert} from 'assert/strict';
  2 | assert(value);

`;

exports[`consistent-assert-style > invalid(13): import {strict as assert} from 'assert/strict';\nassert(value); 2`] = `

Message:
  1 | import {strict as assert} from 'assert/strict';
> 2 | assert(value);
    | ^^^^^^ Prefer \`assert.ok(…)\` over \`assert(…)\`.

Output:
  1 | import {strict as assert} from 'assert/strict';
  2 | assert.ok(value);

`;

exports[`consistent-assert-style > invalid(14): import assert from 'node:assert';\nassert.ok(value); 1`] = `

Options:
- style: 'assert'

Code:
  1 | import assert from 'node:assert';
  2 | assert.ok(value);

`;

exports[`consistent-assert-style > invalid(14): import assert from 'node:assert';\nassert.ok(value); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.ok(value);
    |        ^^ Prefer \`assert(…)\` over \`assert.ok(…)\`.

Output:
  1 | import assert from 'node:assert';
  2 | assert(value);

`;

exports[`consistent-assert-style > invalid(15): import assert from 'node:assert';\nassert.ok(value, \"message\"); 1`] = `

Options:
- style: 'assert'

Code:
  1 | import assert from 'node:assert';
  2 | assert.ok(value, "message");

`;

exports[`consistent-assert-style > invalid(15): import assert from 'node:assert';\nassert.ok(value, \"message\"); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.ok(value, "message");
    |        ^^ Prefer \`assert(…)\` over \`assert.ok(…)\`.

Output:
  1 | import assert from 'node:assert';
  2 | assert(value, "message");

`;

exports[`consistent-assert-style > invalid(16): import assert from 'node:assert/strict';\nassert.ok(value); 1`] = `

Options:
- style: 'assert'

Code:
  1 | import assert from 'node:assert/strict';
  2 | assert.ok(value);

`;

exports[`consistent-assert-style > invalid(16): import assert from 'node:assert/strict';\nassert.ok(value); 2`] = `

Message:
  1 | import assert from 'node:assert/strict';
> 2 | assert.ok(value);
    |        ^^ Prefer \`assert(…)\` over \`assert.ok(…)\`.

Output:
  1 | import assert from 'node:assert/strict';
  2 | assert(value);

`;

exports[`consistent-assert-style > invalid(17): import assert from 'assert';\nassert.ok(value); 1`] = `

Options:
- style: 'assert'

Code:
  1 | import assert from 'assert';
  2 | assert.ok(value);

`;

exports[`consistent-assert-style > invalid(17): import assert from 'assert';\nassert.ok(value); 2`] = `

Message:
  1 | import assert from 'assert';
> 2 | assert.ok(value);
    |        ^^ Prefer \`assert(…)\` over \`assert.ok(…)\`.

Output:
  1 | import assert from 'assert';
  2 | assert(value);

`;

exports[`consistent-assert-style > invalid(18): import assert from 'assert/strict';\nassert.ok(value); 1`] = `

Options:
- style: 'assert'

Code:
  1 | import assert from 'assert/strict';
  2 | assert.ok(value);

`;

exports[`consistent-assert-style > invalid(18): import assert from 'assert/strict';\nassert.ok(value); 2`] = `

Message:
  1 | import assert from 'assert/strict';
> 2 | assert.ok(value);
    |        ^^ Prefer \`assert(…)\` over \`assert.ok(…)\`.

Output:
  1 | import assert from 'assert/strict';
  2 | assert(value);

`;

exports[`consistent-assert-style > invalid(19): import {default as assert} from 'node:assert';\nassert.ok(value); 1`] = `

Options:
- style: 'assert'

Code:
  1 | import {default as assert} from 'node:assert';
  2 | assert.ok(value);

`;

exports[`consistent-assert-style > invalid(19): import {default as assert} from 'node:assert';\nassert.ok(value); 2`] = `

Message:
  1 | import {default as assert} from 'node:assert';
> 2 | assert.ok(value);
    |        ^^ Prefer \`assert(…)\` over \`assert.ok(…)\`.

Output:
  1 | import {default as assert} from 'node:assert';
  2 | assert(value);

`;

exports[`consistent-assert-style > invalid(2): import assert from 'node:assert';\nassert(value, \"message\"); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert(value, "message");

`;

exports[`consistent-assert-style > invalid(2): import assert from 'node:assert';\nassert(value, \"message\"); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert(value, "message");
    | ^^^^^^ Prefer \`assert.ok(…)\` over \`assert(…)\`.

Output:
  1 | import assert from 'node:assert';
  2 | assert.ok(value, "message");

`;

exports[`consistent-assert-style > invalid(20): import {strict as assert} from 'node:assert';\nassert.ok(value); 1`] = `

Options:
- style: 'assert'

Code:
  1 | import {strict as assert} from 'node:assert';
  2 | assert.ok(value);

`;

exports[`consistent-assert-style > invalid(20): import {strict as assert} from 'node:assert';\nassert.ok(value); 2`] = `

Message:
  1 | import {strict as assert} from 'node:assert';
> 2 | assert.ok(value);
    |        ^^ Prefer \`assert(…)\` over \`assert.ok(…)\`.

Output:
  1 | import {strict as assert} from 'node:assert';
  2 | assert(value);

`;

exports[`consistent-assert-style > invalid(21): import check from 'node:assert';\ncheck.ok(value); 1`] = `

Options:
- style: 'assert'

Code:
  1 | import check from 'node:assert';
  2 | check.ok(value);

`;

exports[`consistent-assert-style > invalid(21): import check from 'node:assert';\ncheck.ok(value); 2`] = `

Message:
  1 | import check from 'node:assert';
> 2 | check.ok(value);
    |       ^^ Prefer \`check(…)\` over \`check.ok(…)\`.

Output:
  1 | import check from 'node:assert';
  2 | check(value);

`;

exports[`consistent-assert-style > invalid(22): import {default as assert} from 'node:assert/strict';\nassert.ok(value); 1`] = `

Options:
- style: 'assert'

Code:
  1 | import {default as assert} from 'node:assert/strict';
  2 | assert.ok(value);

`;

exports[`consistent-assert-style > invalid(22): import {default as assert} from 'node:assert/strict';\nassert.ok(value); 2`] = `

Message:
  1 | import {default as assert} from 'node:assert/strict';
> 2 | assert.ok(value);
    |        ^^ Prefer \`assert(…)\` over \`assert.ok(…)\`.

Output:
  1 | import {default as assert} from 'node:assert/strict';
  2 | assert(value);

`;

exports[`consistent-assert-style > invalid(23): import {strict as assert} from 'node:assert/strict';\nassert.ok(value); 1`] = `

Options:
- style: 'assert'

Code:
  1 | import {strict as assert} from 'node:assert/strict';
  2 | assert.ok(value);

`;

exports[`consistent-assert-style > invalid(23): import {strict as assert} from 'node:assert/strict';\nassert.ok(value); 2`] = `

Message:
  1 | import {strict as assert} from 'node:assert/strict';
> 2 | assert.ok(value);
    |        ^^ Prefer \`assert(…)\` over \`assert.ok(…)\`.

Output:
  1 | import {strict as assert} from 'node:assert/strict';
  2 | assert(value);

`;

exports[`consistent-assert-style > invalid(24): import {strict as assert} from 'assert/strict';\nassert.ok(value); 1`] = `

Options:
- style: 'assert'

Code:
  1 | import {strict as assert} from 'assert/strict';
  2 | assert.ok(value);

`;

exports[`consistent-assert-style > invalid(24): import {strict as assert} from 'assert/strict';\nassert.ok(value); 2`] = `

Message:
  1 | import {strict as assert} from 'assert/strict';
> 2 | assert.ok(value);
    |        ^^ Prefer \`assert(…)\` over \`assert.ok(…)\`.

Output:
  1 | import {strict as assert} from 'assert/strict';
  2 | assert(value);

`;

exports[`consistent-assert-style > invalid(25): import assert from 'node:assert';\nassert /* comment */ .ok(value); 1`] = `

Options:
- style: 'assert'

Code:
  1 | import assert from 'node:assert';
  2 | assert /* comment */ .ok(value);

`;

exports[`consistent-assert-style > invalid(25): import assert from 'node:assert';\nassert /* comment */ .ok(value); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert /* comment */ .ok(value);
    |                       ^^ Prefer \`assert(…)\` over \`assert.ok(…)\`.

`;

exports[`consistent-assert-style > invalid(26): import assert from 'node:assert';\nassert(value as boolean); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert(value as boolean);

`;

exports[`consistent-assert-style > invalid(26): import assert from 'node:assert';\nassert(value as boolean); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert(value as boolean);
    | ^^^^^^ Prefer \`assert.ok(…)\` over \`assert(…)\`.

Output:
  1 | import assert from 'node:assert';
  2 | assert.ok(value as boolean);

`;

exports[`consistent-assert-style > invalid(27): import assert from 'node:assert';\nassert.ok(value as boolean); 1`] = `

Options:
- style: 'assert'

Code:
  1 | import assert from 'node:assert';
  2 | assert.ok(value as boolean);

`;

exports[`consistent-assert-style > invalid(27): import assert from 'node:assert';\nassert.ok(value as boolean); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.ok(value as boolean);
    |        ^^ Prefer \`assert(…)\` over \`assert.ok(…)\`.

Output:
  1 | import assert from 'node:assert';
  2 | assert(value as boolean);

`;

exports[`consistent-assert-style > invalid(3): import assert from 'node:assert';\nassert /* comment */ (value); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert /* comment */ (value);

`;

exports[`consistent-assert-style > invalid(3): import assert from 'node:assert';\nassert /* comment */ (value); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert /* comment */ (value);
    | ^^^^^^ Prefer \`assert.ok(…)\` over \`assert(…)\`.

Output:
  1 | import assert from 'node:assert';
  2 | assert.ok /* comment */ (value);

`;

exports[`consistent-assert-style > invalid(4): import assert from 'node:assert/strict';\nassert(value); 1`] = `

  1 | import assert from 'node:assert/strict';
  2 | assert(value);

`;

exports[`consistent-assert-style > invalid(4): import assert from 'node:assert/strict';\nassert(value); 2`] = `

Message:
  1 | import assert from 'node:assert/strict';
> 2 | assert(value);
    | ^^^^^^ Prefer \`assert.ok(…)\` over \`assert(…)\`.

Output:
  1 | import assert from 'node:assert/strict';
  2 | assert.ok(value);

`;

exports[`consistent-assert-style > invalid(5): import assert from 'assert';\nassert(value); 1`] = `

  1 | import assert from 'assert';
  2 | assert(value);

`;

exports[`consistent-assert-style > invalid(5): import assert from 'assert';\nassert(value); 2`] = `

Message:
  1 | import assert from 'assert';
> 2 | assert(value);
    | ^^^^^^ Prefer \`assert.ok(…)\` over \`assert(…)\`.

Output:
  1 | import assert from 'assert';
  2 | assert.ok(value);

`;

exports[`consistent-assert-style > invalid(6): import assert from 'assert/strict';\nassert(value); 1`] = `

  1 | import assert from 'assert/strict';
  2 | assert(value);

`;

exports[`consistent-assert-style > invalid(6): import assert from 'assert/strict';\nassert(value); 2`] = `

Message:
  1 | import assert from 'assert/strict';
> 2 | assert(value);
    | ^^^^^^ Prefer \`assert.ok(…)\` over \`assert(…)\`.

Output:
  1 | import assert from 'assert/strict';
  2 | assert.ok(value);

`;

exports[`consistent-assert-style > invalid(7): import check from 'node:assert';\ncheck(value); 1`] = `

  1 | import check from 'node:assert';
  2 | check(value);

`;

exports[`consistent-assert-style > invalid(7): import check from 'node:assert';\ncheck(value); 2`] = `

Message:
  1 | import check from 'node:assert';
> 2 | check(value);
    | ^^^^^ Prefer \`check.ok(…)\` over \`check(…)\`.

Output:
  1 | import check from 'node:assert';
  2 | check.ok(value);

`;

exports[`consistent-assert-style > invalid(8): import {default as assert} from 'node:assert';\nassert(value); 1`] = `

  1 | import {default as assert} from 'node:assert';
  2 | assert(value);

`;

exports[`consistent-assert-style > invalid(8): import {default as assert} from 'node:assert';\nassert(value); 2`] = `

Message:
  1 | import {default as assert} from 'node:assert';
> 2 | assert(value);
    | ^^^^^^ Prefer \`assert.ok(…)\` over \`assert(…)\`.

Output:
  1 | import {default as assert} from 'node:assert';
  2 | assert.ok(value);

`;

exports[`consistent-assert-style > invalid(9): import {strict as assert} from 'node:assert';\nassert(value); 1`] = `

  1 | import {strict as assert} from 'node:assert';
  2 | assert(value);

`;

exports[`consistent-assert-style > invalid(9): import {strict as assert} from 'node:assert';\nassert(value); 2`] = `

Message:
  1 | import {strict as assert} from 'node:assert';
> 2 | assert(value);
    | ^^^^^^ Prefer \`assert.ok(…)\` over \`assert(…)\`.

Output:
  1 | import {strict as assert} from 'node:assert';
  2 | assert.ok(value);

`;
